--- a/Obligatorio/TODO.txt
+++ b/Obligatorio/TODO.txt
@@ -1,12 +1,21 @@
+- arreglar bug de la fecha. 
+
+- date picker en:
+	- formulario socio
+- Mejorar pantalla de prestamo que devuelva resultado del prestamo en la misma pantalla
+- Agregar Socio en list socios con Ã­cono y alineado a la derecha
+
+
+
 2 - OK
 3 - Combos anidados https://stackoverflow.com/questions/25706639/django-dependent-select
 
 1 - Agregar dato si el socio es moroso en funcionalidad 4 - OK
-2 - Probar lo que está hecho y corregir bugs
-Del punto 2 hacer énfasis en lo de la fecha. Dijo Gustavo que tomemos una decisión por ejemplo <=7 
-3 - Meter el template u otro template mas lindo en todas las páginas y lookear (tablas, botones, etc)
-4 - VER LO DE LAS URLS. Hoy por hoy no cumplimos con las vistas. Dijo Gustavo que de última lo pongamos en el readme, pero estaría bueno cumplir.
-5 - Ver si agregamos formularios de todo. Hay sólo de socio no?
+2 - Probar lo que esta hecho y corregir bugs
+Del punto 2 hacer  enfasis en lo de la fecha. Dijo Gustavo que tomemos una decisiï¿½n por ejemplo <=7 
+3 - Meter el template u otro template mas lindo en todas las pï¿½ginas y lookear (tablas, botones, etc)
+4 - VER LO DE LAS URLS. Hoy por hoy no cumplimos con las vistas. Dijo Gustavo que de ï¿½ltima lo pongamos en el readme, pero estarï¿½a bueno cumplir.
+5 - Ver si agregamos formularios de todo. Hay sï¿½lo de socio no?
 6 - El logo de la bilbioteca con el link siempre al index no lo pude poner, no se ve
 
 
